working kafka event